[tool.poetry]
name = "todo-client"
version = "0.1.0"
description = ""
authors = ["Ricardo Dani <ricardodani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
pydantic = "^1.5.1"
pytest = "^5.4.3"
pytest-aiohttp = "^0.3.0"

[tool.poetry.dev-dependencies]
requests = "^2.24.0"
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
